fix ProjectCreate & CreateMeeting
