# go-backend/internal/api/router/MeetingsRouter.go
@@ -7,7 +7,7 @@ import (
 )
 
 func (router *Router) MeetingsRoutes(group *gin.RouterGroup) {
-	group.POST("/meetings/new_meeting", middleware.CookieMiddleware(), controller.CreateMeeting)
+	group.POST("/meetings/", middleware.CookieMiddleware(), controller.CreateMeeting)
 	group.POST("/meetings/:meeting_id/invite", middleware.CookieMiddleware(), controller.InviteUserToMeeting)
 	group.GET("/users/meetings", middleware.CookieMiddleware(), controller.GetUserMeetings)
 	group.GET("/meetings/:meeting_id", middleware.CookieMiddleware(), controller.GetMeetingDetails)
